--- a/css/style.css
+++ b/css/style.css
@@ -4,77 +4,158 @@
 		Full details here https://css-tricks.com/box-sizing/ */
 }
 
-body{
-	margin: 0px; /* Often browsers have a 5px margin by deafult*/
-	font-family: sans-serif;
-}
 
-section{
-	max-width: 1000px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
 
-header{
-	background-color: darkOrange;
-	color: white; /* more readable on an orange background */
-	padding-top: 50px;
-	padding-bottom: 50px;
-}
 
+/*| Navigation |*/
 nav{
 	width: 100%;
 	height: 60px;
-	background-color: wheat;
+	background-color: white;
+    position: fixed;
+    text-align: center;
 }
 
-nav a, nav h3{
-	float: left;
-	margin: 0px;
-	line-height: 60px;
-	margin-left: 1em;
-	margin-right: 1em;
+nav ul{
+    list-style: none;
+    position: relative;
+    display: inline-table;
+}
+
+nav ul a{
+    color:#000;
+	line-height: 30px;
+	margin-left: 4em;
+	margin-right: 4em;
 	text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 10px;
 }
 
-nav a:hover{
-	text-decoration: underline; /* Hover styles to let people know they can click it */
+nav ul a:hover{
+	color: silver;
 }
+
+
+
+
+
+/*| Home Page |*/
+header{
+	background-color: rgba(255, 255, 255, 0.08);
+	color: white; /* more readable on an orange background */
+    width: 100%;
+    height: 850px;
+    padding-top: 50px;
+}
+
+
+
+
+
+/*| Containers |*/
+section{
+    background-color: black;
+    color: white;
+	width: 100%;
+    height: 850px;
+    margin-top: 20px;
+}
+
+#content{
+    background-color: transparent;
+    width: 90%;
+    height: 750px;
+    margin-left: auto;
+	margin-right: auto;
+}
+
+#content2{
+    background-color: transparent;
+    width: 90%;
+    height: 730px;
+    margin-left: auto;
+	margin-right: auto;
+}
+
+#three{
+    background-color: black;
+    color: white;
+	width: 100%;
+    height: 800px;
+    margin-top: 20px;
+}
+
+
+
+/*| Text |*/
+h2{
+    font-family: palatino; 
+    font-size: 50px;
+    text-align: left; 
+    letter-spacing: 8px;
+    text-transform: uppercase;
+    margin-bottom: 0px;
+}
+
+p{
+    font-family: monospace; 
+    font-size: 14px;
+    text-align: left; 
+    letter-spacing: 4px;
+    margin-top: 20px;
+}
+
+
+
+/*| Imgs |*/
+#zoom img:hover{
+	transform:scale(1.2);
+}
+
+.center{
+    display: inline-block;
+    margin-left: 110px;
+    margin-right: 110px;
+}
+
 
 
 
 /* Simple grid */
+#left_column{
+    background: transparent;
+    width: 50%;
+	float: left;  
+}
+
+#right_column{
+    background: transparent;
+    width: 50%;
+	float: right;  
+}
+
 .g-row{
 	width: 100%;
 	overflow: hidden;
 }
 
 .g-row img{
-	width: 100%; /*This makes all images in grids to be the size of their cell */
+	width: 94%; /*This makes all images in grids to be the size of their cell */
 }
 
-.g-50{
-	width: 50%;
-	float: left;
-}
 
 .g-30{
-	width: 30%;
+	width: 40%;
 	float: left;
 }
 
 .g-70{
-	width: 70%;
+	width: 60%;
 	float: left;
 }
 
-.show{
-	border: 1px solid blue;
-	padding: 2px;
-}
 
 .padded{
-	padding: 20px; /* I add this to cells to add a little padding*/
+	padding-left: 10px; /* I add this to cells to add a little padding*/
 }
